workshop/teams-management/teams-operator/engineering-platform-ns.yaml
# Namespace for the operator
apiVersion: v1
kind: Namespace
metadata:
  name: engineering-platform
